--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@ body::-webkit-scrollbar-thumb{
 
 body{
   margin: 0;
+
   background-color: var(--main-bg-color);
   background-image: url("./bg.jpg");
   background-size: cover;
@@ -41,7 +42,6 @@ body{
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -49,6 +49,7 @@ body{
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background-color: #282c34;
 }
 
 .App-link {
@@ -66,4 +67,24 @@ body{
 
 .linkButton:hover{
   color: var(--accent-color);
+}
+
+#video1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  z-index: -1;
+}
+#video2 {
+  position: absolute;
+  top: 100vh;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  z-index: -1;
+  transform: rotate(180deg)
 }
