--- a/frontend/src/components/SelectionPanel/SelectionPanel.css
+++ b/frontend/src/components/SelectionPanel/SelectionPanel.css
@@ -1,3 +1,9 @@
-.overflowStyle::-webkit-scrollbar{
+#overflowStyle::-webkit-scrollbar{
+    width: 8px;
     background-color: rgba(0,0,0,0);
+}
+
+#overflowStyle::-webkit-scrollbar-thumb{
+    width: 8px;
+    background-color: #f4cc70;
 }
